--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "scripts": {
     "analyze": "cem analyze --litelement",
-    "start": "web-dev-server"
+    "start": "web-dev-server",
+    "demo": "cd demo && webpack serve -c ./webpack.dev.config.js --static ."
   },
   "dependencies": {
+    "@comunica/query-sparql": "^2.8.3",
     "@inrupt/solid-client-authn-browser": "^1.17.1",
     "lit": "^2.0.2",
     "n3": "^1.17.1"
